// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly for a basic divider 1`] = `
.c2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c2:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  border-color: currentColor;
  border-style: solid;
  opacity: 0.2;
  margin: 1em 0;
  height: 0;
  border-width: 1px 0 0 0;
}

.c0 {
  opacity: 1;
  border-color: #e7e9ed;
}

<hr
  class="c0 c1 c2"
/>
`;

exports[`renders correctly for a horizontal divider with content 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c2 {
  border-color: currentColor;
  border-style: solid;
  opacity: 0.2;
  margin: 1em 0;
  height: 0;
  border-width: 1px 0 0 0;
}

.c1 {
  opacity: 1;
  border-color: #e7e9ed;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1::before {
  background: white;
  color: #c3c3c3;
  content: 'Test';
  text-transform: uppercase;
  font-size: 0.7em;
  font-weight: 700;
  padding: 0.2rem 0.5rem;
}

<div
  class="c0"
>
  Hello
  <hr
    class="c1 c2 c0"
    content="Test"
    style="content: Test;"
  />
  World
</div>
`;

exports[`renders correctly for a vertical divider 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  border-color: currentColor;
  border-style: solid;
  opacity: 0.2;
  margin: 0 1em;
  min-height: 100%;
  width: 0;
  border-width: 0 0 0 1px;
}

.c2 {
  opacity: 1;
  border-color: #e7e9ed;
}

.c2 {
  height: auto;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
  class="c0 c1"
>
  Hello
  <hr
    class="c2 c3 c1"
  />
  World
</div>
`;

exports[`renders correctly for a vertical divider with content 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  border-color: currentColor;
  border-style: solid;
  opacity: 0.2;
  margin: 0 1em;
  min-height: 100%;
  width: 0;
  border-width: 0 0 0 1px;
}

.c2 {
  opacity: 1;
  border-color: #e7e9ed;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: auto;
}

.c2::before {
  background: white;
  color: #c3c3c3;
  content: 'or';
  text-transform: uppercase;
  font-size: 0.7em;
  font-weight: 700;
  padding: 0.2rem 0.5rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
  class="c0 c1"
  height="50px"
  style="align-items: center; height: 50px;"
>
  Hello
  <hr
    class="c2 c3 c1"
    content="or"
    style="content: or;"
  />
  World
</div>
`;
